[package]
name = "nrs-commit"
version = "0.2.0"
authors = ["Sebastian Martinez <smartinez@nuclearis.com>"]
edition = "2018"
description = "A CLI tool to help you write git commit"
homepage = "https://github.com/NRS-Soft/nrs-commit"
repository = "https://github.com/NRS-Soft/nrs-commit"
keywords = ["cli", "git"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.13.0"
dialoguer = "0.8.0"

[lib]
name = "commit"
path = "src/lib.rs"
